sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:7: error: not found: value n
		gap = 3*n+1;
                        ^